--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "underscores",
+  "name": "IMG Studio",
   "version": "1.0.0",
-  "description": "Hi. I'm a starter theme called _s, or underscores, if you like. I'm a theme meant for hacking so don't use me as a Parent Theme. Instead try turning me into the next, most awesome, WordPress theme out there. That's what I'm here for.",
+  "description": "SAAF Website",
   "author": "Automattic Theme Team",
   "license": "GPL-2.0-or-later",
   "keywords": [
-    "WordPress",
+    "SAAF",
     "Theme"
   ],
   "homepage": "https://github.com/Automattic/_s#readme",
